Working well using RecyclerView, but it is a mess since dagger it is not implemented!

--- a/presentation/src/main/res/layout/activity_post_list.xml
+++ b/presentation/src/main/res/layout/activity_post_list.xml
@@ -7,6 +7,7 @@
     tools:context=".view.activity.PostListActivity">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_postActivity_list"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
