--- a/presentation/src/main/res/layout/activity_post_list.xml
+++ b/presentation/src/main/res/layout/activity_post_list.xml
@@ -1,13 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".view.activity.PostListActivity">
+
+    <ProgressBar
+        android:id="@+id/pb_postActivity_loading"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:progress="100"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_postActivity_list" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_postActivity_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
