--- a/presentation/src/main/res/layout/view_post_item.xml
+++ b/presentation/src/main/res/layout/view_post_item.xml
@@ -14,8 +14,9 @@
             android:id="@+id/tv_viewPostItem_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="TextView"
-            android:textAllCaps="true"
+            android:layout_weight="1"
+            android:text="large tesda asda asd asd asd asd asdsadsad"
+            android:textAllCaps="false"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="24sp" />
 
@@ -23,7 +24,9 @@
             android:id="@+id/tv_viewPostItem_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_weight="0"
             android:text="TextView"
+            android:textAllCaps="false"
             android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
