--- a/presentation/src/main/res/layout/activity_post_details.xml
+++ b/presentation/src/main/res/layout/activity_post_details.xml
@@ -7,44 +7,10 @@
     android:orientation="vertical"
     tools:context=".view.activity.PostDetailsActivity">
 
-    <ProgressBar
-        android:id="@+id/pb_postDetailsActivity_loading"
-        style="?android:attr/progressBarStyleHorizontal"
+    <FrameLayout
+        android:id="@+id/fy_PostDetailsActivity_frameContainer"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        tools:visibility="gone" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tv_postDetailsActivity_postId"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:fontFamily="monospace"
-        android:text="number"
-        android:textAlignment="textEnd"
-        android:textColor="@color/colorPrimary"
-        android:textSize="18sp" />
-
-    <TextView
-        android:id="@+id/tv_postDetailsActivity_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="0"
-        android:fontFamily="monospace"
-        android:text="title"
-        android:textAlignment="center"
-        android:textAllCaps="true"
-        android:textColor="@android:color/holo_purple"
-        android:textSize="36sp" />
-
-    <TextView
-        android:id="@+id/tv_postDetailsActivity_body"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:fontFamily="monospace"
-        android:text="content"
-        android:textAlignment="center"
-        android:textSize="18sp" />
+    </FrameLayout>
 </LinearLayout>
